--- a/Msafe/MSafe/res/layout/root_child0_item.xml
+++ b/Msafe/MSafe/res/layout/root_child0_item.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal"
     android:paddingBottom="@dimen/padding_list"
     android:paddingTop="@dimen/padding_list" >
+
     <LinearLayout
         android:id="@+id/grid_item_rubbish_des"
         android:layout_width="wrap_content"
@@ -14,24 +15,21 @@
         android:layout_marginLeft="@dimen/padding_list"
         android:layout_toRightOf="@id/grid_item_image"
         android:orientation="horizontal" >
+
         <TextView
             android:id="@+id/item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/grid_item_check0"
             android:textSize="@dimen/gird_item_up_textsize" />
-     
-    </LinearLayout>
-    <ImageView
+    </LinearLayout><Switch
         android:id="@+id/grid_rubbish_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:button="@drawable/checked_style"
         android:clickable="false"
-        android:paddingRight="0dp"
-        android:src="@drawable/checked" />
+        android:paddingRight="0dp" />
+
     <ImageView
         android:id="@+id/grid_item_image"
         android:layout_width="wrap_content"
@@ -40,5 +38,6 @@
         android:layout_centerVertical="true"
         android:contentDescription="@string/app_name"
         android:src="@drawable/doc_icon" />
+    <View android:layout_marginTop="@dimen/padding_list" android:layout_below="@id/grid_item_image" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:background="@color/gray_mainactivity_btn_press"/>
 
 </RelativeLayout>
