--- a/Msafe/MSafe/res/layout/rootadmin.xml
+++ b/Msafe/MSafe/res/layout/rootadmin.xml
@@ -58,24 +58,19 @@
                 android:paddingTop="@dimen/padding_list"
                 android:text="@string/scan_txt" />
 
-            <ScrollView
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/fileadmin_btn_clear"
                 android:layout_below="@id/divde_line" >
 
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/viewPager1"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent" >
-
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/viewPager1"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:visibility="invisible" />
-                </FrameLayout>
-            </ScrollView>
+                    android:layout_height="match_parent"
+                    android:visibility="invisible" />
+            </FrameLayout>
         </RelativeLayout>
     </TabHost>
 
