--- a/Msafe/MSafe/res/layout/tabchild_rootstart.xml
+++ b/Msafe/MSafe/res/layout/tabchild_rootstart.xml
@@ -1,74 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingLeft="@dimen/padding_list"
     android:paddingRight="@dimen/padding_list" >
- <ListView
-     	android:background="@color/green_mainlayout_background"
-            android:id="@+id/autostart_list0"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:visibility="visible" />
-  <!--  <LinearLayout
+
+    <LinearLayout
+        android:id="@+id/tab_child_tab"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical" />
 
-        <TextView
-            android:id="@+id/tip_child0_tab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding_list"
-            android:paddingTop="@dimen/padding_list"
-            android:text="自动开启的应用" />
-
-        <TextView
-            android:id="@+id/tab_child0_tip0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/scan_txt"
-            android:textSize="@dimen/gird_item_down_textsize" />
-
-        <ListView
-            android:id="@+id/autostart_list0"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/line_height"
-            android:background="@color/gray_mainactivity_btn_press" />
-
-        <TextView
-            android:id="@+id/tip_child1_tab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding_list"
-            android:paddingTop="@dimen/padding_list"
-            android:text="禁用自开启的应用" />
-
-        <TextView
-            android:id="@+id/tab_child0_tip1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/scan_txt"
-            android:textSize="@dimen/gird_item_down_textsize" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/line_height"
-            android:background="@color/gray_mainactivity_btn_press" />
-
-        <ListView
-            android:id="@+id/nowaystart_list1"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible" />
-    </LinearLayout>-->  
-
-</LinearLayout>
+</ScrollView>
