--- a/Msafe/MSafe/res/layout/item1_child_tab1.xml
+++ b/Msafe/MSafe/res/layout/item1_child_tab1.xml
@@ -5,8 +5,9 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/padding_list"
     android:paddingRight="@dimen/padding_list" >
-
+	<TextView android:id="@+id/no_list" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="扫描不到可用应用"/>
     <LinearLayout
+        android:id="@+id/init_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
@@ -16,34 +17,37 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/doc_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:text="噶的地图" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_weight="1" >
 
             <RelativeLayout
                 android:id="@+id/child_tab_abovedig_title1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/title1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:padding="@dimen/padding_list"
-                    android:singleLine="true"
-                    android:text="@string/tab_child1_root_titles1" />
 
                 <TextView
                     android:id="@+id/num1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/title1"
                     android:layout_centerHorizontal="true"
                     android:layout_centerInParent="true"
                     android:background="@drawable/checked"
@@ -56,23 +60,15 @@
                 android:id="@+id/child_tab_abovedig_title0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1" >
-
-                <TextView
-                    android:id="@+id/title0"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:padding="@dimen/padding_list"
-                    android:text="@string/tab_child1_root_titles0" />
 
                 <TextView
                     android:id="@+id/num0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/title0"
                     android:layout_centerHorizontal="true"
-                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
                     android:background="@drawable/checked"
                     android:gravity="center"
                     android:text="5"
@@ -80,23 +76,5 @@
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/divider_height"
-        android:layout_marginTop="@dimen/padding_list"
-        android:background="@color/gray_mainactivity_btn_press" />
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="@dimen/padding_list" >
-
-        <LinearLayout
-            android:id="@+id/root_notification_content"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
 
 </LinearLayout>
