--- a/Msafe/MSafe/res/layout/root_child0_item.xml
+++ b/Msafe/MSafe/res/layout/root_child0_item.xml
@@ -22,13 +22,19 @@
             android:layout_height="wrap_content"
             android:text="@string/grid_item_check0"
             android:textSize="@dimen/gird_item_up_textsize" />
-    </LinearLayout><Switch
-        android:id="@+id/grid_rubbish_checkbox"
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:clickable="false"
-        android:paddingRight="0dp" />
+        android:layout_alignParentRight="true" >
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+       
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/grid_item_image"
@@ -38,6 +44,12 @@
         android:layout_centerVertical="true"
         android:contentDescription="@string/app_name"
         android:src="@drawable/doc_icon" />
-    <View android:layout_marginTop="@dimen/padding_list" android:layout_below="@id/grid_item_image" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:background="@color/gray_mainactivity_btn_press"/>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/divider_height"
+        android:layout_below="@id/grid_item_image"
+        android:layout_marginTop="@dimen/padding_list"
+        android:background="@color/gray_mainactivity_btn_press" />
 
 </RelativeLayout>
