--- a/Msafe/MSafe/res/layout/poweradmin.xml
+++ b/Msafe/MSafe/res/layout/poweradmin.xml
@@ -6,14 +6,17 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/green_breathecircleview_background"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/padding_list"
+        android:paddingRight="@dimen/padding_list" >
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -22,11 +25,34 @@
             android:textSize="@dimen/textsize_mainactiviy_top" />
 
         <org.com.lix_.plugin.Circle2LineView
+            android:id="@+id/circle"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_below="@id/title"
+            android:layout_centerInParent="true" />
 
-    <LinearLayout
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="21小时30分 "
+            android:textColor="@color/white"
+            android:textSize="@dimen/textsize_mainactiviy_top" />
+
+        <TextView
+            android:id="@+id/des"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/time"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/padding_list_helf"
+            android:text="@string/powerdes"
+            android:textColor="@color/white"
+            android:textSize="@dimen/gird_item_down_textsize" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -34,118 +60,143 @@
         android:orientation="vertical"
         android:visibility="visible" >
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/layout_0"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:paddingLeft="@dimen/padding_list"
-            android:paddingRight="@dimen/padding_list" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
+            android:paddingRight="@dimen/padding_list"
+            android:paddingTop="@dimen/padding_list" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:paddingLeft="@dimen/padding_list"
-            android:paddingRight="@dimen/padding_list" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
+                android:paddingBottom="@dimen/padding_list_helf"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_str0" />
 
             <TextView
+                android:id="@+id/tag0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:paddingLeft="@dimen/padding_list"
-            android:paddingRight="@dimen/padding_list" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:paddingLeft="@dimen/padding_list"
-            android:paddingRight="@dimen/padding_list" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" >
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+                android:layout_alignParentRight="true"
+                android:background="@color/green_breathecircleview_background"
+                android:gravity="center"
+                android:paddingBottom="@dimen/padding_list_helf"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_button_str" />
 
             <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/tag0"
+                android:layout_marginTop="@dimen/padding_list"
+                android:background="@color/gray_mainactivity_btn_press" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_0"
+            android:paddingLeft="@dimen/padding_list"
+            android:paddingRight="@dimen/padding_list"
+            android:paddingTop="@dimen/padding_list" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/padding_list_helf"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_str1" />
+
+            <TextView
+                android:id="@+id/tag2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@color/green_breathecircleview_background"
+                android:gravity="center"
+                android:paddingBottom="@dimen/padding_list_helf"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_button_str" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/tag2"
+                android:layout_marginTop="@dimen/padding_list"
+                android:background="@color/gray_mainactivity_btn_press" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_1"
+            android:paddingLeft="@dimen/padding_list"
+            android:paddingRight="@dimen/padding_list"
+            android:paddingTop="@dimen/padding_list" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/padding_list_helf"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_str2" />
+
+            <TextView
+                android:id="@+id/tag1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@color/green_breathecircleview_background"
+                android:gravity="center"
+                android:paddingBottom="@dimen/padding_list_helf"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_button_str" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/tag1"
+                android:layout_marginTop="@dimen/padding_list"
+                android:background="@color/gray_mainactivity_btn_press" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:paddingBottom="@dimen/padding_list" >
+
+            <View
+                android:id="@+id/line0"
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="@color/gray_mainactivity_btn_press" />
 
             <TextView
+                android:layout_below="@id/line0"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:text="@string/finish" />
-        </LinearLayout>
-    </LinearLayout>
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:paddingLeft="@dimen/padding_list"
+                android:paddingRight="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list_helf"
+                android:text="@string/power_str2" />
+        </RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
