--- a/Msafe/MSafe/res/values/colors.xml
+++ b/Msafe/MSafe/res/values/colors.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- MainActivity.java需要的颜色 -->
-    <color name="white">#ffffff</color>
+    <color name="white">#fafafa</color>
     <color name="green_mainlayout_background">#43c361</color>
     <color name="white_mainlayout_background">#ffffff</color>
     <color name="white_textcolor">#ffffff</color>
-    <color name="green_breathecircleview_background">#4ed66e</color>
+    <color name="green_breathecircleview_background">#34b862</color>
     <color name="gray_mainactivity_btn_press">#d7d7d7</color>
     <color name="rubbishclear_bg">#aaf49c</color>
     <color name="radar_outcircle_color">#D1FFD4</color>
